fix headings and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ h2 {
 	font-family: courier, #B5B5B5;
 	vertical-align: center
 	font-size: 20px;
+    padding-left: 30px;
+}
+h3 {
+    padding-left: 30px;
 }
 html {
     background-color: #FF99CC
@@ -34,7 +38,13 @@ i:hover
 }
 a {
     color:#FF99C2;
+    font-size:20px;
+    text-decoration: none;
   }
+a:hover
+{
+    text-decoration: underline;
+}
 p {
 	font-family: courier;
 	font-size: 20px;
@@ -42,11 +52,13 @@ p {
 	color: #343440;
     margin-top: 1em;
     margin-bottom: 1em;
+    padding-left: 30px;
 }
 h2 {
   vertical-align: center;
-  font-size: 20px;
+  font-size: 30px;
   text-decoration: none;
+  padding: 30px,30px,30px,30px;
 }
 #contact-block {
     display: inline-block;
